# internal/routes/router.go
@@ -2,16 +2,12 @@ package routes
 
 import (
 	"github.com/gin-gonic/gin"
-	"github.com/holycann/cultour-backend/internal/gemini"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-func SetupRouter(router *gin.Engine, geminiClient gemini.AIClient) {
+func SetupRouter(router *gin.Engine) {
 	router.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-
-	router.POST("/ask", geminiClient.AskAI)
-	router.POST("/ask/event/:id", geminiClient.AskEventAI)
 
 	// router.GET("/health", func(c *gin.Context) {
 	// 	c.JSON(http.StatusOK, gin.H{
